<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    tools:context=".UpdateProfileActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_marginLeft="@dimen/_10sdp"
        android:layout_marginRight="@dimen/_10sdp">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:layout_margin="@dimen/_16ssp"
            android:orientation="vertical">

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/imageView_profile_logo"
                android:layout_width="@dimen/_80sdp"
                android:layout_height="@dimen/_80sdp"
                android:layout_gravity="center"
                android:src="@drawable/app_icon" />
            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/txt_view_update_profile"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="@dimen/_7sdp"
                android:layout_marginBottom="@dimen/_18sdp"
                android:gravity="center"
                android:fontFamily="sans-serif-light"
                android:textStyle="bold"
                android:textColor="@color/largeText"
                android:text="@string/UpdateProfile"
                android:textSize="@dimen/_12ssp"/>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/til_update_profile_full_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_5sdp"
                app:helperTextEnabled="true"
                android:imeOptions="actionNext"
                app:helperTextTextAppearance="@style/HelperTextLabel"
                app:helperText="@string/fullNameHelper">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/update_profile_full_name"
                    android:layout_width="match_parent"
                    android:background="@color/white"
                    android:paddingBottom="@dimen/_4sdp"
                    android:layout_height="wrap_content"
                    android:paddingStart="0dp"
                    android:hint="@string/fullNameUpdateProfile"
                    android:textColor="@color/smallText"
                    android:textSize="@dimen/_12ssp"
                    android:inputType="text|textCapWords|textNoSuggestions" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/til_update_profile_email_id"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_5sdp"
                app:helperTextEnabled="false"
                android:imeOptions="actionNext">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/update_profile_email_id"
                    android:layout_width="match_parent"
                    android:background="@color/white"
                    android:paddingBottom="@dimen/_4sdp"
                    android:layout_height="wrap_content"
                    android:paddingStart="0dp"
                    android:hint="@string/emailIDUpdateProfile"
                    android:textColor="@color/smallText"
                    android:textSize="@dimen/_12ssp"
                    android:inputType="text|textCapWords|textNoSuggestions" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/til_update_profile_mobile_no"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_5sdp"
                app:helperTextEnabled="false"
                android:imeOptions="actionNext">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/update_profile_mobile_no"
                    android:layout_width="match_parent"
                    android:background="@color/white"
                    android:paddingBottom="@dimen/_4sdp"
                    android:layout_height="wrap_content"
                    android:paddingStart="0dp"
                    android:hint="@string/mobileUpdateProfile"
                    android:textColor="@color/smallText"
                    android:textSize="@dimen/_12ssp"
                    android:maxLength="10"
                    android:inputType="number" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/til_update_profile_dob"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_5sdp"
                app:helperTextEnabled="false"
                android:imeOptions="actionNext">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/update_profile_dob"
                    android:layout_width="match_parent"
                    android:background="@color/white"
                    android:paddingBottom="@dimen/_4sdp"
                    android:layout_height="wrap_content"
                    android:paddingStart="0dp"
                    android:hint="@string/DOBUpdateProfile"
                    android:textColor="@color/smallText"
                    android:textSize="@dimen/_12ssp"
                    android:inputType="text|textCapWords|textNoSuggestions" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/update_profile_save_btn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                card_view:cardElevation="@dimen/_5sdp"
                android:layout_marginTop="@dimen/_10sdp"
                android:background="@drawable/round_corner_button"
                android:minHeight="@dimen/_40sdp"
                android:text="@string/saveChangesBTNUpdateProfile"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textSize="@dimen/_12ssp"
                android:theme="@style/MaterialButton" />
        </LinearLayout>
    </ScrollView>


</RelativeLayout>