<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".WelcomeScreen">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true"
        android:scrollbars="none"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:orientation="vertical"
            android:gravity="center_vertical"
            android:layout_height="match_parent">


            <LinearLayout
                android:layout_width="match_parent"
                android:orientation="vertical"
                android:id="@+id/WelcomeTopLayout"
                android:gravity="bottom"
                android:layout_weight="1"
                android:layout_height="0dp">
                <androidx.appcompat.widget.AppCompatImageView
                    android:id="@+id/imageView_login_app_logo"
                    android:layout_width="@dimen/_80sdp"
                    android:layout_height="@dimen/_80sdp"
                    android:layout_gravity="center"
                    android:src="@drawable/app_icon" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:gravity="center"
                    android:layout_gravity="center"
                    android:textColor="#3c2372"
                    android:textStyle="bold"
                    android:fontFamily="sans-serif-light"
                    android:text="@string/welcome"
                    android:textSize="@dimen/_12ssp" />
                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/_10sdp"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:textColor="#3c2372"
                    android:text="@string/welcomeMessage"
                    android:textSize="15sp" />
            </LinearLayout>


            <LinearLayout
                android:id="@+id/WelcomeBottomLayout"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:gravity="center"
                android:layout_below="@id/WelcomeTopLayout"
                android:orientation="vertical">

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/btn_login"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/round_corner_button"
                    android:minHeight="50dp"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:layout_margin="5dp"
                    android:textStyle="bold"
                    android:fontFamily="sans-serif-light"
                    android:text="@string/loginWelcome"
                    android:textAllCaps="false"
                    android:textColor="@color/white"
                    android:textSize="16sp"
                    android:theme="@style/MaterialButton" />
                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/txt_new_account"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:textColor="#3c2372"
                    android:layout_marginTop="15dp"
                    android:gravity="center"
                    android:textStyle="bold"
                    android:fontFamily="sans-serif-light"
                    android:text="@string/signupWelcome"
                    android:textSize="16sp" />
            </LinearLayout>
        </LinearLayout>
    </ScrollView>

</RelativeLayout>