<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".ForgotPasswordActivity">


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_marginLeft="@dimen/_10sdp"
        android:layout_marginRight="@dimen/_10sdp">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:layout_margin="@dimen/_16ssp"
            android:orientation="vertical">

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/imageView_forgot_password_app_logo"
                android:layout_width="@dimen/_80sdp"
                android:layout_height="@dimen/_80sdp"
                android:layout_gravity="center"
                android:src="@drawable/app_icon" />
            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/txt_view_Forgot_Password"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="@dimen/_7sdp"
                android:gravity="center"
                android:textStyle="bold"
                android:fontFamily="sans-serif-light"
                android:textColor="@color/largeText"
                android:text="@string/ForgotPassword"
                android:textSize="@dimen/_12ssp"/>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/til_forgot_password_Email_id"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_5sdp"
                app:helperTextEnabled="false"
                android:imeOptions="actionNext">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/forgot_password_Email_id"
                    android:layout_width="match_parent"
                    android:background="@color/white"
                    android:paddingBottom="@dimen/_4sdp"
                    android:layout_height="wrap_content"
                    android:paddingStart="0dp"
                    android:hint="@string/emailForgotPassword"
                    android:textColor="@color/smallText"
                    android:textSize="@dimen/_12ssp"
                    android:inputType="text|textCapWords|textNoSuggestions" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_send_forgot_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:elevation="@dimen/_12sdp"
                android:background="@drawable/round_corner_button"
                android:minHeight="@dimen/_40sdp"
                android:text="@string/sendBTNForgotPassword"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textSize="@dimen/_12ssp"
                android:layout_marginTop="@dimen/_14sdp"
                android:theme="@style/MaterialButton" />
        </LinearLayout>
    </ScrollView>

</RelativeLayout>